<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/org.misty.rc.projectalice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/input_display"
        style="@style/calcdisp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="30dp"
        android:text="1234567890" />


    <TableLayout
        android:id="@+id/input_calc_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <TableRow
            android:id="@+id/calcrow0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/allclear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                style="@style/numpad"
                android:text="@string/allclear" />

            <TextView
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/clear" />

            <TextView
                android:id="@+id/divide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/divide" />
        </TableRow>

        <TableRow
            android:id="@+id/calcrow1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                style="@style/numpad"
                android:text="@string/seven" />

            <TextView
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/eight" />

            <TextView
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/nine" />

            <TextView
                android:id="@+id/times"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/times" />
        </TableRow>

        <TableRow
            android:id="@+id/calcrow2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/four" />

            <TextView
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/five" />

            <TextView
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/six" />

            <TextView
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/minus" />
        </TableRow>

        <TableRow
            android:id="@+id/calcrow3"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/one" />

            <TextView
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/two" />

            <TextView
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/three" />

            <TextView
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/plus" />
        </TableRow>

        <TableRow
            android:id="@+id/calcrow4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/doublezero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/doublezero" />

            <TextView
                android:id="@+id/equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/numpad"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/equal" />
        </TableRow>

        <TableRow
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" >
        </TableRow>

        <TableRow
            android:id="@+id/payment_button"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" >

            <TextView
                android:id="@+id/income"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/income"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/income" />

            <TextView
                android:id="@+id/expenses"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/expenses"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/expenses" />
        </TableRow>
    </TableLayout>

</LinearLayout>